# miochiyan

./: CMakeLists.txt  README.md
cmake/Modules/: FindDlib.cmake  GetLibOpenCV.cmake  GetLibTorch.cmake
core/: expression_capture.cpp  expression_capture.h
ui/: main.cpp  mainwindow.cpp  mainwindow.h
ui/forms/: mainwindow.ui
